--- a/StarrockGame/Content/Data/Templates/Asteroid.xml
+++ b/StarrockGame/Content/Data/Templates/Asteroid.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <XnaContent xmlns:ns="Microsoft.Xna.Framework">
   <Asset Type="TData.TemplateData.AsteroidTemplateData">
-	<EntityName>TestAsteroid</EntityName>
+	<Name>TestAsteroid</Name>
     <TextureName>Asteroid1</TextureName>
     <Structure>300.0</Structure>
     <Mass>600.0</Mass>
