--- a/StarrockGame/Content/Data/Templates/CannonTest.xml
+++ b/StarrockGame/Content/Data/Templates/CannonTest.xml
@@ -1,10 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <XnaContent xmlns:ns="Microsoft.Xna.Framework">
-  <Asset Type="TData.TemplateData.WeaponTemplateData">
+  <Asset Type="TData.TemplateData.LaserBulletTemplateData">
     <Name>BlasterCannon</Name>
+	<File>CannonTest</File>
 	<TextureName>CannonTest</TextureName>
+	<Structure>1</Structure>
+	<Mass>1</Mass>
+	<Size>1</Size>
+	<Inertia>0</Inertia>
     <WeaponType>0</WeaponType>
     <EnergyCost>5.0</EnergyCost>
     <Damage>10.0</Damage>
+	<Cooldown>1</Cooldown>
+	<Velocity>10</Velocity>
   </Asset>
 </XnaContent>
