--- a/StarrockGame/Content/Data/Templates/Spaceship.xml
+++ b/StarrockGame/Content/Data/Templates/Spaceship.xml
@@ -2,6 +2,7 @@
 <XnaContent xmlns:ns="Microsoft.Xna.Framework">
   <Asset Type="TData.TemplateData.SpaceshipTemplateData">
     <Name>TestName</Name>
+	<File>Spaceship</File>
     <TextureName>TestShip</TextureName>
     <Structure>300.0</Structure>
     <Mass>20.0</Mass>
@@ -62,11 +63,24 @@
 				<LocalAngle>0</LocalAngle>
 			</Item>
 			<Item>
-				<LocalPosition>20 -30</LocalPosition>
+				<LocalPosition>20 30</LocalPosition>
 				<LocalAngle>0</LocalAngle>
 			</Item>
 		</Bases>
 	</PrimaryWeaponBases>
+	<SecondaryWeaponBases>
+		<WeaponType>CannonTest</WeaponType>
+		<Bases>
+			<Item>
+				<LocalPosition>20 -30</LocalPosition>
+				<LocalAngle>0</LocalAngle>
+			</Item>
+			<Item>
+				<LocalPosition>20 30</LocalPosition>
+				<LocalAngle>0</LocalAngle>
+			</Item>
+		</Bases>
+	</SecondaryWeaponBases>
 	<RadarRange>50</RadarRange>
   </Asset>
 </XnaContent>
