major changes to class names (templates and ai) and added class diagrams and drafts for prototype presentation

--- a/StarrockGame/Content/Data/Templates/Asteroid.xml
+++ b/StarrockGame/Content/Data/Templates/Asteroid.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <XnaContent xmlns:ns="Microsoft.Xna.Framework">
-  <Asset Type="TData.TemplateData.AsteroidTemplateData">
+  <Asset Type="TData.TemplateData.AsteroidTemplate">
 	<Name>TestAsteroid</Name>
 	<File>Asteroid</File>
     <TextureName>Asteroid1</TextureName>
