--- a/StarrockGame/Content/Data/Templates/Spaceship.xml
+++ b/StarrockGame/Content/Data/Templates/Spaceship.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <XnaContent xmlns:ns="Microsoft.Xna.Framework">
-  <Asset Type="TData.TemplateData.SpaceshipTemplateData">
+  <Asset Type="TData.TemplateData.SpaceshipTemplate">
     <Name>TestName</Name>
 	<File>Spaceship</File>
     <TextureName>TestShip</TextureName>
