--- a/StarrockGame/Content/Data/Templates/BS_Caine.xml
+++ b/StarrockGame/Content/Data/Templates/BS_Caine.xml
@@ -17,7 +17,7 @@
 	<ShieldReplenishValuePerSecond>50</ShieldReplenishValuePerSecond>
     <EnergyRecoveryPerSecond>0</EnergyRecoveryPerSecond>
     <ShieldRecoveryPerSecond>0</ShieldRecoveryPerSecond>
-    <FuelRecoveryperSecond>0</FuelRecoveryperSecond>
+    <FuelRecoveryPerSecond>0</FuelRecoveryPerSecond>
     <ModuleCount>5</ModuleCount>
     <Engines>
 		<Item>
