added stats to preperation window and costs for ships and modules
changed module template -> debuff and buff merged cause of effect array

--- a/StarrockGame/Content/Data/Templates/Module.xml
+++ b/StarrockGame/Content/Data/Templates/Module.xml
@@ -5,10 +5,8 @@
 	<File>Module</File>
     <ModuleEffects>
 		<Item>
-			<BuffType>1</BuffType>
-			<Buff>2.0</Buff>
-			<DebuffType>0</DebuffType>
-			<Debuff>0</Debuff>
+			<EffectType>1</EffectType>
+			<Value>2.0</Value>
 		</Item>
 	</ModuleEffects>
     <Price>10</Price>
