--- a/StarrockGame/Content/Data/Templates/BS_Caine.xml
+++ b/StarrockGame/Content/Data/Templates/BS_Caine.xml
@@ -1,89 +1,90 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <XnaContent xmlns:ns="Microsoft.Xna.Framework">
   <Asset Type="TData.TemplateData.SpaceshipTemplate">
+    <Checksum>624023116</Checksum>
     <Name>BS_Caine</Name>
-	<File>BS_Caine</File>
+    <File>BS_Caine</File>
     <TextureName>BS Caine</TextureName>
-	<Score>150</Score>
-    <Structure>2500.0</Structure>
-    <Mass>2400.0</Mass>
-    <Size>1.0</Size>
-    <Inertia>1000.0</Inertia>
-	<Fuel>2900.0</Fuel>
-    <Energy>1500.0</Energy>
-    <ShieldCapacity>2000.0</ShieldCapacity>
+    <Score>150</Score>
+    <Structure>2500</Structure>
+    <Mass>2400</Mass>
+    <Size>1</Size>
+    <Inertia>1000</Inertia>
+    <Fuel>2900</Fuel>
+    <Energy>1500</Energy>
+    <ShieldCapacity>2000</ShieldCapacity>
     <ScavengePower>50</ScavengePower>
-	<ScavengeRange>240</ScavengeRange>
+    <ScavengeRange>240</ScavengeRange>
     <ShieldReplenishCostPerSecond>50</ShieldReplenishCostPerSecond>
-	<ShieldReplenishValuePerSecond>50</ShieldReplenishValuePerSecond>
+    <ShieldReplenishValuePerSecond>50</ShieldReplenishValuePerSecond>
     <EnergyRecoveryPerSecond>0</EnergyRecoveryPerSecond>
     <ShieldRecoveryPerSecond>0</ShieldRecoveryPerSecond>
     <FuelRecoveryPerSecond>0</FuelRecoveryPerSecond>
     <ModuleCount>5</ModuleCount>
     <Engines>
-		<Item>
-			<Direction>1</Direction>
-			<LocalPosition>-123 -22</LocalPosition>
-			<PropulsionPower>1800</PropulsionPower>
-			<FuelCostPerSecond>60</FuelCostPerSecond>
-			<ParticlesPerSecond>160</ParticlesPerSecond>
-		</Item>
-		<Item>
-			<Direction>1</Direction>
-			<LocalPosition>-123 22</LocalPosition>
-			<PropulsionPower>1800</PropulsionPower>
-			<FuelCostPerSecond>60</FuelCostPerSecond>
-			<ParticlesPerSecond>160</ParticlesPerSecond>
-		</Item>
-		<Item>
-			<Direction>2</Direction>
-			<LocalPosition>37 0</LocalPosition>
-			<PropulsionPower>1000</PropulsionPower>
-			<FuelCostPerSecond>40</FuelCostPerSecond>
-			<ParticlesPerSecond>100</ParticlesPerSecond>
-		</Item>
-		<Item>
-			<Direction>4</Direction>
-			<LocalPosition>155 19</LocalPosition>
-			<PropulsionPower>650</PropulsionPower>
-			<FuelCostPerSecond>5</FuelCostPerSecond>
-			<ParticlesPerSecond>100</ParticlesPerSecond>
-		</Item>
-		<Item>
-			<Direction>8</Direction>
-			<LocalPosition>155 -19</LocalPosition>
-			<PropulsionPower>650</PropulsionPower>
-			<FuelCostPerSecond>5</FuelCostPerSecond>
-			<ParticlesPerSecond>100</ParticlesPerSecond>
-		</Item>
-	</Engines>
-	<PrimaryWeaponBases>
-		<WeaponType>CannonTest</WeaponType>
-		<Bases>
-			<Item>
-				<LocalPosition>20 -30</LocalPosition>
-				<LocalAngle>0</LocalAngle>
-			</Item>
-			<Item>
-				<LocalPosition>20 30</LocalPosition>
-				<LocalAngle>0</LocalAngle>
-			</Item>
-		</Bases>
-	</PrimaryWeaponBases>
-	<SecondaryWeaponBases>
-		<WeaponType>CannonTest</WeaponType>
-		<Bases>
-			<Item>
-				<LocalPosition>20 -30</LocalPosition>
-				<LocalAngle>0</LocalAngle>
-			</Item>
-			<Item>
-				<LocalPosition>20 30</LocalPosition>
-				<LocalAngle>0</LocalAngle>
-			</Item>
-		</Bases>
-	</SecondaryWeaponBases>
-	<RadarRange>500</RadarRange>
-	<Price>200</Price>
+      <Item>
+        <Direction>1</Direction>
+        <LocalPosition>-123 -22</LocalPosition>
+        <PropulsionPower>1800</PropulsionPower>
+        <FuelCostPerSecond>60</FuelCostPerSecond>
+        <ParticlesPerSecond>160</ParticlesPerSecond>
+      </Item>
+      <Item>
+        <Direction>1</Direction>
+        <LocalPosition>-123 22</LocalPosition>
+        <PropulsionPower>1800</PropulsionPower>
+        <FuelCostPerSecond>60</FuelCostPerSecond>
+        <ParticlesPerSecond>160</ParticlesPerSecond>
+      </Item>
+      <Item>
+        <Direction>2</Direction>
+        <LocalPosition>37 0</LocalPosition>
+        <PropulsionPower>1000</PropulsionPower>
+        <FuelCostPerSecond>40</FuelCostPerSecond>
+        <ParticlesPerSecond>100</ParticlesPerSecond>
+      </Item>
+      <Item>
+        <Direction>4</Direction>
+        <LocalPosition>155 19</LocalPosition>
+        <PropulsionPower>650</PropulsionPower>
+        <FuelCostPerSecond>5</FuelCostPerSecond>
+        <ParticlesPerSecond>100</ParticlesPerSecond>
+      </Item>
+      <Item>
+        <Direction>8</Direction>
+        <LocalPosition>155 -19</LocalPosition>
+        <PropulsionPower>650</PropulsionPower>
+        <FuelCostPerSecond>5</FuelCostPerSecond>
+        <ParticlesPerSecond>100</ParticlesPerSecond>
+      </Item>
+    </Engines>
+    <PrimaryWeaponBases>
+      <WeaponType>CannonTest</WeaponType>
+      <Bases>
+        <Item>
+          <LocalPosition>20 -30</LocalPosition>
+          <LocalAngle>0</LocalAngle>
+        </Item>
+        <Item>
+          <LocalPosition>20 30</LocalPosition>
+          <LocalAngle>0</LocalAngle>
+        </Item>
+      </Bases>
+    </PrimaryWeaponBases>
+    <SecondaryWeaponBases>
+      <WeaponType>CannonTest</WeaponType>
+      <Bases>
+        <Item>
+          <LocalPosition>20 -30</LocalPosition>
+          <LocalAngle>0</LocalAngle>
+        </Item>
+        <Item>
+          <LocalPosition>20 30</LocalPosition>
+          <LocalAngle>0</LocalAngle>
+        </Item>
+      </Bases>
+    </SecondaryWeaponBases>
+    <RadarRange>500</RadarRange>
+    <Price>200</Price>
   </Asset>
 </XnaContent>
