--- a/StarrockGame/Content/Data/Templates/BS_CaineWreckage.xml
+++ b/StarrockGame/Content/Data/Templates/BS_CaineWreckage.xml
@@ -5,6 +5,7 @@
     <Name>BS_CaineWreckage</Name>
     <File>BS_CaineWreckage</File>
     <TextureName>BS CaineWreckage</TextureName>
+	<DefaultController>StarrockGame.AI.NoController</DefaultController>
     <Score>50</Score>
     <Structure>40</Structure>
     <Mass>20</Mass>
