--- a/StarrockGame/Content/Data/Templates/CannonTest.xml
+++ b/StarrockGame/Content/Data/Templates/CannonTest.xml
@@ -5,6 +5,7 @@
     <Name>BlasterCannon</Name>
     <File>CannonTest</File>
     <TextureName>CannonTest</TextureName>
+	<DefaultController>StarrockGame.AI.NoController</DefaultController>
     <Structure>1</Structure>
     <Mass>1</Mass>
     <Size>0.25</Size>
