added blueprint popup on gameover

--- a/StarrockGame/Content/Data/Templates/SpaceshipWreckage.xml
+++ b/StarrockGame/Content/Data/Templates/SpaceshipWreckage.xml
@@ -4,7 +4,7 @@
     <Checksum>220681549</Checksum>
     <Name>TestWreckage</Name>
     <File>Wreckage</File>
-    <TextureName>TestShipWreckage</TextureName>
+    <TextureName>SpaceshipWreckage</TextureName>
 	<DefaultController>StarrockGame.AI.NoController</DefaultController>
     <Score>50</Score>
     <Structure>40</Structure>
