--- a/StarrockGame/Content/Data/Templates/Hunter.xml
+++ b/StarrockGame/Content/Data/Templates/Hunter.xml
@@ -66,7 +66,7 @@
       </Item>
     </Engines>
     <PrimaryWeaponBases>
-      <WeaponType>CannonTest</WeaponType>
+      <WeaponType>AdvRocket</WeaponType>
       <Bases>
         <Item>
           <LocalPosition>20 -30</LocalPosition>
@@ -79,7 +79,7 @@
       </Bases>
     </PrimaryWeaponBases>
     <SecondaryWeaponBases>
-      <WeaponType>CannonTest</WeaponType>
+      <WeaponType>AdvCannon</WeaponType>
       <Bases>
         <Item>
           <LocalPosition>20 -30</LocalPosition>
